--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,8 @@ ul {
 a {
   text-decoration: none;
 }
+
+.sortable-helper {
+  box-shadow: 1px 2px 7px 1px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
