--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,8 @@ a {
 .sortable-helper {
   box-shadow: 1px 2px 7px 1px rgba(0, 0, 0, 0.2);
 }
+
+.chrome-picker {
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1),
+              0px 4px 8px rgba(0, 0, 0, 0.1) !important;
+}
